<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.laboratorio05_navigationcomponent.ui.MovieViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.NewMovieFragment"
        android:background="@color/backgroundLayout"
        android:padding="@dimen/fragmentPadding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Movie"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="50sp"
                android:paddingBottom="15dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout"
                android:layout_marginBottom="25dp"
                app:boxStrokeColor="@color/white"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/movieNamefr2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:text="@={viewmodel.name}"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout"
                android:layout_marginBottom="25dp"
                android:hint="@string/category"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/movieCategoryfr2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:hint="@string/category"
                    android:padding="15dp"
                    android:text="@={viewmodel.category}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout"
                android:layout_marginBottom="25dp"
                android:hint="@string/description"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/movieDescriptionfr2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:hint="@string/description"
                    android:padding="15dp"
                    android:text="@={viewmodel.description}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout"
                android:layout_marginBottom="25dp"
                android:hint="@string/calification"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/movieQualificationfr2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:hint="@string/calification"
                    android:padding="15dp"
                    android:text="@={viewmodel.qualification}"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSubmit"
                android:onClick="@={() -> viewmodel.createMovie()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/submit"
                android:background="@color/buttonColor"
                />

        </LinearLayout>
        <!-- TODO: Update blank fragment layout -->
    </FrameLayout>
</layout>
