<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.example.laboratorio05_navigationcomponent.ui.movie.MovieViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movie.BillboardFragment"
        android:background="@color/backgroundLayout"
        android:padding="@dimen/fragmentPadding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/billboard"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingBottom="25dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardLayout"
                android:focusable="true">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/star_wars_movie"
                        app:srcCompat="@drawable/star_wars"
                        android:paddingStart="10dp"
                        />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Start Wars episodio 3:"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="La venganza de los SIth"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="9.8"
                            android:textColor="@color/calification"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cardLayout"
                android:focusable="true">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/star_wars_movie"
                        app:srcCompat="@drawable/star_wars"
                        android:paddingStart="10dp"
                        />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Start Wars episodio 3:"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="La venganza de los SIth"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="9.8"
                            android:textColor="@color/calification"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonFirstFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/fabbutton"
            app:srcCompat="@drawable/baseline_add_24"/>
    </FrameLayout>
</layout>
